manifests/multimedia/radarr/base/deployment.yaml
# Copyright 2016-2019 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: radarr
  labels:
    k8s-app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: radarr
  template:
    metadata:
      labels:
        k8s-app: radarr
    spec:
      serviceAccountName: radarr
      containers:
      - name: radarr
        image: lsioarmhf/radarr-aarch64:139
        imagePullPolicy: Always
        ports:
        - name: ui
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: radarr-config
        - mountPath: /downloads
          name: radarr-downloads
        - mountPath: /movies
          name: radarr-movies
        resources:
          requests:
            memory: "500Mi"
            cpu: "500m"
          limits:
            memory: "500Mi"
            cpu: "500m"
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: radarr-downloads
        persistentVolumeClaim:
          claimName: radarr-downloads
      - name: radarr-movies
        nfs:
          server: 192.168.1.13
          path: "/volume1/video/Films"
